<resources>
    <string name="app_name">Lab1</string>
    <string name="lord_of_the_fries">Lord of the Fries</string>
    <string name="address">улица Пушкина, дом Колотушкина</string>
    <string name="descript">Здесь можно съесть ещё этих мягких французских булок, да выпить чаю</string>
    <string name="time">10:00 - 23:00</string>
    <string name="where">3-я ул. Строителей, 25</string>
    <string name="email">lord_of_the_fries.com</string>
    <string name="phone">8-800-555-35-35</string>
</resources>
