<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="273dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@mipmap/michelinstarrestaurantsgalvin" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:editable="false"
                android:text="@string/lord_of_the_fries"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="2"
                android:background="?android:attr/listDivider"
                android:visibility="visible" />

            <TextView
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:clickable="false"
                android:editable="false"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:text="@string/email"
                android:textSize="18sp"
                android:textStyle="italic" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="2"
                android:background="?android:attr/listDivider"
                android:visibility="visible" />

            <TextView
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:clickable="false"
                android:contextClickable="false"
                android:editable="false"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:text="@string/phone"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="2"
                android:background="?android:attr/listDivider"
                android:visibility="visible" />

            <TextView
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:importantForAutofill="no"
                android:inputType="textPostalAddress"
                android:text="@string/where"
                android:textAlignment="textStart"
                android:textAppearance="@android:style/TextAppearance"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="2"
                android:background="?android:attr/listDivider"
                android:visibility="visible" />

            <TextView
                android:id="@+id/multiAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:contextClickable="false"
                android:editable="false"
                android:text="@string/descript" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_weight="2"
                android:background="?android:attr/listDivider"
                android:visibility="visible" />

            <TextView
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:editable="false"
                android:ems="10"
                android:enabled="true"
                android:importantForAutofill="no"
                android:inputType="time"
                android:text="@string/time"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>